add token middleware
